--- a/task_8/mysite/site_library/templates/site_library/graphs.html
+++ b/task_8/mysite/site_library/templates/site_library/graphs.html
@@ -33,7 +33,7 @@
             </ul>
         </div>
     </nav>
-    <center><h4 style='margin-left: 15px;'>Статистика библиотеки</h4></center>
+    <center><h4 style='margin-left: 15px;'>Статистика кафе за 5 лет</h4></center>
     <div class="graphs" style="display:flex; flex-wrap: wrap; align-items: center; justify-content: space-around;">
         {%for g in graphs%}
         <div class="graph" style="width: 400px; height: 400px; margin: 10px;">
